re PR rtl-optimization/11083 (ICE in commit_one_edge_insertion, at cfgrtl.c:1438 with -O2 -fnon-call-exceptions)

PR optimization/11083
	* toplev.c (rest_of_compilation): Delete unreachable blocks
	if dead edges were purged after the addressof pass.

From-SVN: r69547